src/test/deca/syntax/valid/decaObjet/emptyClass/00assignation.deca
class A {
    
}
class B {

}
{
    A a = new A();
    B b = a;
}